platform/kyverno/gateway-kyverno.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kyverno-metrics
  namespace: kyverno
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kyverno-metrics
      backendRefs:
        - name: kyverno
          port: 8000
